# AI

MCP/client/calculator-client/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
MCP/client/py-calculator/: .env.example  README.md  Setup.md  pyproject.toml  requirements.txt
MCP/client/py-calculator/.claude/: settings.local.json
MCP/client/py-calculator/app/: config.py
MCP/client/py-calculator/app/api/: __init__.py  dependencies.py  main.py
MCP/client/py-calculator/app/domain/: __init__.py  models.py
MCP/client/py-calculator/app/infrastructure/: mcp_client.py  ollama_client.py  ollama_client_instrumented.py  telemetry.py  tool_registry.py
MCP/client/py-calculator/app/services/: chat_service.py
MCP/client/py-calculator/app/static/: index.html
MCP/client/py-calculator/docs/: regen.md  telemetry.md
MCP/client/py-calculator/tests/fixtures/: conftest.py
MCP/client/py-calculator/tests/integration/: test_chat_flow.py
MCP/server/backend-gateway/: .env.example  .gitignore  README.md  docker-compose.yml  verify-setup.ps1  (+1 more)
MCP/server/py-calculator/: .env.example  README.md  Setup.md  pyproject.toml
MCP/server/py-calculator/.claude/: settings.local.json
MCP/server/py-calculator/calculator/: calculator.py  server.py  telemetry.py
MCP/server/py-calculator/docs/: obs-mon.md  performance-test.md  prompts.md  regen.md
MCP/server/py-calculator/resources/: sample.txt
MCP/server/py-calculator/tests/: __init__.py  test_telemetry.py
MCP/server/py-calculator/tests/performance/: README.md
MCP/server/py-calculator/tests/performance/k6/scenarios/: benchmark-tools.js  endurance-test.js  load-test.js  spike-test.js  stress-test.js
MCP/server/py-calculator/tests/performance/results/: .gitignore
MCP/server/py-calculator/tests/performance/scripts/: run-endurance-test.ps1  run-endurance-test.sh  run-load-test.ps1  run-load-test.sh  run-quick-test.ps1  run-quick-test.sh  run-stress-test.ps1  run-stress-test.sh  setup-k6.sh
(+68 files in other folders)
